--- a/DICOM/Classes.html
+++ b/DICOM/Classes.html
@@ -1009,6 +1009,7 @@ class Series:
         logger.info(&#34;Series.write called&#34;)
         try:
             if isinstance(value_range, list):
+                pixelArray = np.nan_to_num(pixelArray, posinf=0, neginf=0)
                 pixelArray = np.clip(pixelArray, value_range[0], value_range[1])
             else:
                 list_values = np.unique(pixelArray).flatten()
@@ -1667,6 +1668,7 @@ class Image:
         logger.info(&#34;Image.write called&#34;)
         try:
             if isinstance(value_range, list):
+                pixelArray = np.nan_to_num(pixelArray, posinf=0, neginf=0)
                 pixelArray = np.clip(pixelArray, value_range[0], value_range[1])
             else:
                 list_values = np.unique(pixelArray).flatten()
@@ -2131,6 +2133,7 @@ class Image:
         logger.info(&#34;Image.write called&#34;)
         try:
             if isinstance(value_range, list):
+                pixelArray = np.nan_to_num(pixelArray, posinf=0, neginf=0)
                 pixelArray = np.clip(pixelArray, value_range[0], value_range[1])
             else:
                 list_values = np.unique(pixelArray).flatten()
@@ -3064,6 +3067,7 @@ masked_array = main_image.overlay_mask(mask_image)</p></div>
     logger.info(&#34;Image.write called&#34;)
     try:
         if isinstance(value_range, list):
+            pixelArray = np.nan_to_num(pixelArray, posinf=0, neginf=0)
             pixelArray = np.clip(pixelArray, value_range[0], value_range[1])
         else:
             list_values = np.unique(pixelArray).flatten()
@@ -3887,6 +3891,7 @@ This class creates the list based on the Weasel GUI TreeView selection if it's n
         logger.info(&#34;Series.write called&#34;)
         try:
             if isinstance(value_range, list):
+                pixelArray = np.nan_to_num(pixelArray, posinf=0, neginf=0)
                 pixelArray = np.clip(pixelArray, value_range[0], value_range[1])
             else:
                 list_values = np.unique(pixelArray).flatten()
@@ -5391,6 +5396,7 @@ masked_array = main_series.overlay_mask(mask_series)</p></div>
     logger.info(&#34;Series.write called&#34;)
     try:
         if isinstance(value_range, list):
+            pixelArray = np.nan_to_num(pixelArray, posinf=0, neginf=0)
             pixelArray = np.clip(pixelArray, value_range[0], value_range[1])
         else:
             list_values = np.unique(pixelArray).flatten()
